--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<body>
 			<header id="header" class="wrapper">
-				<h1 class="site-title"><a href="index6.html"><img decoding="async" src="img/logo.svg" alt="Profile"></a></h1>
+				<h1 class="site-title"><a href="index.html"><img decoding="async" src="img/logo.svg" alt="Profile"></a></h1>
 				<nav>
 					<ul>
 						<li><a href="#about">About</a></li>
